// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultipleDatesPicker > has a custom label 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r3»"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="btn min-h-fit h-10 rounded-md justify-start flex-nowrap font-normal"
    data-state="closed"
    type="button"
  >
    <span
      class="text-left text-ellipsis overflow-hidden text-nowrap"
    >
      When will you be visiting?
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`MultipleDatesPicker > is disabled 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r4»"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="btn min-h-fit h-10 rounded-md justify-start flex-nowrap font-normal"
    data-state="closed"
    disabled=""
    type="button"
  >
    <span
      class="text-left text-ellipsis overflow-hidden text-nowrap"
    >
      Pick one or more dates
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`MultipleDatesPicker > shows calendar with specific month 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r2»"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="btn min-h-fit h-10 rounded-md justify-start flex-nowrap font-normal"
    data-state="open"
    type="button"
  >
    <span
      class="text-left text-ellipsis overflow-hidden text-nowrap"
    >
      Pick one or more dates
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`MultipleDatesPicker > shows default/preselected dates 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r1»"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="btn min-h-fit h-10 rounded-md justify-start flex-nowrap"
    data-state="open"
    type="button"
  >
    <span
      class="text-left text-ellipsis overflow-hidden text-nowrap"
    >
      Mar 01, 2022 and Mar 15, 2022
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`MultipleDatesPicker > shows the current month 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r0»"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="btn min-h-fit h-10 rounded-md justify-start flex-nowrap font-normal"
    data-state="open"
    type="button"
  >
    <span
      class="text-left text-ellipsis overflow-hidden text-nowrap"
    >
      Pick one or more dates
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;
